# cezzis-com-ingestion-agentic-wf

./: .gitignore  README.md  chunking-agent.code-workspace  embedding-agent.code-workspace  extraction-agent.code-workspace
.assets/: kibana-dashboard__cocktails-ingestion-activity.ndjson.ndjson
embedding-agent/: .gitignore  AUTH0_SETUP.md  Dockerfile  README.md  makefile  pyproject.toml  pytest.ini
embedding-agent/.iac/argocd/: cezzis-cocktails-embedding-agent-cloudsync.yaml  cezzis-cocktails-embedding-agent-loc.yaml  cezzis-cocktails-enbedding-agent.yaml  image-updater-cloudsync.yaml  image-updater-loc.yaml  image-updater.yaml
embedding-agent/.iac/k8s/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml
embedding-agent/.iac/k8s-cloudsync/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml
embedding-agent/.iac/k8s-loc/: configmap.yml  external-secrets.yml  kustomization.yaml
embedding-agent/.iac/terraform/: datasources.tf  keyvault-secrets.tf  locals.tf  providers.tf  variables.tf
embedding-agent/src/cocktails_embedding_agent/: .env  app_module.py  main.py
embedding-agent/src/cocktails_embedding_agent/application/: __init__.py
embedding-agent/src/cocktails_embedding_agent/application/behaviors/: __init__.py
embedding-agent/src/cocktails_embedding_agent/application/concerns/: __init__.py
embedding-agent/src/cocktails_embedding_agent/domain/: __init__.py  base_agent_evt_receiver.py
embedding-agent/src/cocktails_embedding_agent/domain/config/: __init__.py  aisearch_api_options.py  app_options.py  emb_agent_options.py  hugging_face_options.py  kafka_consumer_settings.py  oauth_options.py  qdrant_options.py
embedding-agent/src/cocktails_embedding_agent/domain/models/: __init__.py  cocktail_chunking_model.py
embedding-agent/src/cocktails_embedding_agent/infrastructure/eventing/: __init__.py  embedding_event_receiver.py
embedding-agent/src/cocktails_embedding_agent/infrastructure/llm/: __init__.py  ollama_utils.py
embedding-agent/test/unit/domain/config/: test_emb_agent_options.py  test_fixtures.py  test_kafka_options.py
extraction-agent/: .ruff.toml  Dockerfile  README.md  makefile  pyproject.toml
extraction-agent/.iac/argocd/: cezzis-cocktails-extraction-agent-cloudsync.yaml  cezzis-cocktails-extraction-agent-loc.yaml  cezzis-cocktails-extraction-agent.yaml  image-updater-cloudsync.yaml  image-updater-loc.yaml  image-updater.yaml
extraction-agent/.iac/k8s/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml
extraction-agent/.iac/k8s-cloudsync/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml
extraction-agent/.iac/k8s-loc/: configmap.yml  deployment.yml  external-secrets.yml  kustomization.yaml
extraction-agent/src/cocktails_extraction_agent/: .env  .env.loc  app_module.py  main.py
extraction-agent/src/cocktails_extraction_agent/application/: __init__.py
extraction-agent/src/cocktails_extraction_agent/application/behaviors/: __init__.py
extraction-agent/src/cocktails_extraction_agent/application/concerns/: __init__.py
extraction-agent/src/cocktails_extraction_agent/application/prompts/: __init__.py
extraction-agent/src/cocktails_extraction_agent/application/services/: cocktails_api_service.py
extraction-agent/src/cocktails_extraction_agent/application/tools/: __init__.py
extraction-agent/src/cocktails_extraction_agent/domain/: __init__.py  base_agent_evt_receiver.py
extraction-agent/src/cocktails_extraction_agent/domain/config/: __init__.py  app_options.py  cocktails_api_options.py  ext_agent_options.py  kafka_consumer_settings.py  kafka_producer_settings.py  llm_model_options.py  llm_options.py
extraction-agent/src/cocktails_extraction_agent/domain/models/: __init__.py  cocktail_extraction_model.py
extraction-agent/src/cocktails_extraction_agent/domain/prompts/: __init__.py  extraction_prompts.py
extraction-agent/src/cocktails_extraction_agent/domain/tools/: __init__.py
extraction-agent/src/cocktails_extraction_agent/infrastructure/eventing/: __init__.py  extraction_event_receiver.py
extraction-agent/src/cocktails_extraction_agent/infrastructure/llm/: __init__.py  llm_content_cleaner.py  ollama_llm_factory.py  ollama_utils.py
extraction-agent/test/unit/application/services/: test_cocktails_api_service.py
extraction-agent/test/unit/domain/config/: test_ext_agent_options.py  test_fixtures.py  test_kafka_options.py  test_llm_options.py
extraction-agent/test/unit/infrastructure/llm/: test_llm_content_cleaner.py
(+155 files in other folders)
